classDiagram
direction LR

%% ==================== FRONTEND ====================

class QuizControllerFE["QuizController"] {
    <<frontend controller>>
    + UpdateSettings(id: int, model: QuizUpdateViewModel) Task~IActionResult~
}

class QuizUpdateViewModel {
    <<view model>>
    + Title : string
    + Description : string?
    + TimeLimitMinutes : int?
    + PassingScore : int
    + CourseId : int
    + TotalQuestions : int
    + Distributions : List~QuizLessonDistributionItem~
}

class QuizLessonDistributionItem {
    <<view model>>
    + LessonId : int
    + QuestionCount : int
}

%% ==================== BACKEND - CONTROLLER ====================

class QuizControllerBE["QuizController"] {
    <<backend controller>>
    - _quizService : IQuizService
    
    + UpdateQuizSettings(id: int, request: QuizUpdateRequest) Task~IActionResult~
    - GetInstructorId() int
}

%% ==================== BACKEND - DTOs ====================

class QuizUpdateRequest {
    <<dto>>
    + Title : string
    + Description : string?
    + TimeLimitMinutes : int?
    + PassingScore : int
    + TotalQuestions : int
    + Distributions : List~QuizLessonDistributionRequest~
}

class QuizLessonDistributionRequest {
    <<dto>>
    + LessonId : int
    + QuestionCount : int
}

class QuizDetailResponse {
    <<dto>>
    + QuizId : int
    + Title : string
    + Description : string?
    + CourseId : int
    + CourseTitle : string
    + TotalQuestions : int
    + QuestionCount : int
    + TimeLimitMinutes : int?
    + PassingScore : int
    + IsHidden : bool
    + IsRemoved : bool
    + CreatedAt : DateTime?
    + UpdatedAt : DateTime?
}

class QuizQuestionResponse {
    <<dto>>
    + QuestionId : int
    + CourseId : int
    + LessonId : int?
    + QuestionText : string
    + Explanation : string?
    + QuestionType : QuizQuestionType
}

class QuizOptionResponse {
    <<dto>>
    + OptionId : int
    + OptionText : string
    + IsCorrect : bool
    + OrderIndex : int
}

class QuizLessonDistributionResponse {
    <<dto>>
    + LessonId : int
    + QuestionCount : int
}

%% ==================== BACKEND - DOMAIN ENTITIES ====================

class Quiz {
    <<entity>>
    + QuizId : int
    + InstructorId : int
    + Title : string
    + Description : string?
    + TimeLimitMinutes : int?
    + PassingScore : int
    + TotalQuestions : int
    + CourseId : int
    + IsHidden : bool
    + IsRemoved : bool
    + CreatedAt : DateTime?
    + UpdatedAt : DateTime?
}

%% ==================== BACKEND - SERVICE INTERFACES ====================

class IQuizService {
    <<service interface>>
    + UpdateQuizSettingsAsync(quizId: int, request: QuizUpdateRequest, instructorId: int) Task~QuizDetailResponse~ *
}

class IQuizRepository {
    <<repository interface>>
    + GetByIdAsync(quizId: int) Task~Quiz?~ *
    + UpdateAsync(quiz: Quiz) Task *
}

%% ==================== BACKEND - SERVICE IMPLEMENTATION ====================

class QuizService {
    <<service>>
    - _quizRepo : IQuizRepository
    
    + UpdateQuizSettingsAsync(quizId: int, request: QuizUpdateRequest, instructorId: int) Task~QuizDetailResponse~
}

%% ==================== BACKEND - REPOSITORY IMPLEMENTATION ====================

class QuizRepository {
    <<repository>>
    - _context : AppDbContext
    
    + GetByIdAsync(quizId: int) Task~Quiz?~
    + UpdateAsync(quiz: Quiz) Task
}

%% ==================== BACKEND - DbContext ====================

class AppDbContext {
    <<dbcontext>>
    + Quizzes : DbSet~Quiz~
}

%% ==================== RELATIONSHIPS ====================

%% === UNIDIRECTIONAL ASSOCIATION ===
QuizControllerBE --> IQuizService
QuizService --> IQuizRepository
QuizRepository --> AppDbContext

%% === AGGREGATION & COMPOSITION ===
QuizUpdateViewModel *-- QuizLessonDistributionItem
QuizUpdateRequest *-- QuizLessonDistributionRequest
QuizDetailResponse *-- QuizQuestionResponse
QuizDetailResponse *-- QuizLessonDistributionResponse
QuizQuestionResponse *-- QuizOptionResponse

%% === INTERFACE REALIZATION ===
QuizService ..|> IQuizService
QuizRepository ..|> IQuizRepository

%% === DEPENDENCY ===
QuizControllerFE ..> QuizControllerBE
QuizControllerFE ..> QuizUpdateViewModel
QuizControllerBE ..> QuizUpdateRequest
QuizService ..> QuizUpdateRequest
QuizService ..> QuizDetailResponse
QuizService ..> Quiz
QuizRepository ..> Quiz

%% ==================== STYLES ====================

classDef default fill:#FFFFFF,stroke:#000000,stroke-width:1px,color:#000000